# jiralog

./: .gitignore  Cargo.toml  README.md
demo/: demo.yml
docker/: docker-compose.yaml
src/: editor.rs  jira.rs  main.rs  model.rs  worklog.rs
